--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
       <div class="container">
         <div class="header">
-            <h1>Garo Sarajian</h1>
+            <h1>Jacques Kassa</h1>
         </div>
       
         <div class="navigation">
