--- a/research.html
+++ b/research.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Garo Sarajian</title>
+    <title>Jacques Kassa</title>
     
     <link href="style.css" rel="stylesheet">
   </head>
