--- a/projects.html
+++ b/projects.html
@@ -23,10 +23,10 @@
       <div class="text">
         <div class="header">
             <h2>Projects</h2> </div>
-          <p><a href="https://jacqueskassa.github.io/graphic">Simpson's paradox in the NBA</a></p>
+          <p><a href="https://jacqueskassa.github.io/graphic">  </a></p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A neat graphic I made to visualize the paradox amongst the shooting percentages of the NBA's top scorers.</p>
           
-         <p><a href="https://github.com/gsarajian/NBA-international">NBA Globalization</a></p>
+         <p><a href="https://github.com/gsarajian/NBA-international">  </a></p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A neat graphic I made to visualize the minutes played by foreign-born players in the NBA, stratified by position.</p>
       </div>
       
